<resources>
    <string name="app_name">DAIRemote</string>
    <string name="interaction_instructions">To simulate input:\nTap with 1 finger to left-click\nTap with 2 fingers to right-click\nTap with 3 fingers to middle-click\n\nDrag with 2 fingers to scroll\n\nLong-press and move to drag\nTap once to release drag</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tap_here_to_start_the_tutorial">Tap here to start the tutorial!</string>
    <string name="win">WIN</string>
    <string name="fn">FN</string>
    <string name="ctrl">CTRL</string>
    <string name="shift">SHIFT</string>
    <string name="alt">ALT</string>
    <string name="next_page">...</string>
    <string name="f1">F1</string>
    <string name="f2">F2</string>
    <string name="f3">F3</string>
    <string name="f4">F4</string>
    <string name="f5">F5</string>
    <string name="f6">F6</string>
    <string name="f7">F7</string>
    <string name="f8">F8</string>
    <string name="f9">F9</string>
    <string name="f10">F10</string>
    <string name="f11">F11</string>
    <string name="f12">F12</string>
    <string name="ins">INS</string>
    <string name="del">DEL</string>
    <string name="prsc">PRSC</string>
    <string name="tab">TAB</string>
    <string name="esc">ESC</string>
    <string name="disconnect_from_host">Disconnect from host</string>
    <string name="cycle_audio">Cycle audio</string>
    <string name="display_profiles">Display profiles</string>
    <string name="keyboard_icon_to_pull_system_keyboard">Keyboard icon to pull system keyboard</string>
    <string name="provide_app_instructions">Provide app instructions</string>
    <string name="audio">Audio</string>
    <string name="about">About</string>
    <string name="dairemote_is_a_versatile_display_audio_and_input_remote_for_windows_desktops_it_will_enable_users_to_save_and_load_display_profiles_cycle_through_audio_playback_devices_and_even_use_their_android_phone_as_keyboard_and_mouse_input_all_from_the_comfort_of_wherever_you_re_sitting">DAIRemote is a versatile display, audio, and input remote for Windows desktops. It enables users to save and load display profiles, cycle through audio playback devices, and even use their Android phone as keyboard and mouse input—all from the comfort of wherever you\'re sitting.</string>
    <string name="developed_by_nfahim_zaman_nmehad_ali_nlynn_hakim_nshawinder_minhas_ndomenic_zarza">Developed by: \nFahim Zaman \nMehad Ali \nLynn Hakim \nShawinder Minhas \nDomenic Zarza</string>
    <string name="instructions">Instructions</string>
    <string name="clickable_dairemote_logo">Clickable DAIRemote logo</string>
    <string name="dairemote">DAIRemote</string>
    <string name="tap_to_start">Tap to start</string>
    <string name="available_hosts">Available Hosts</string>
    <string name="add_server_host">Add server host</string>
    <string name="home">Home</string>
    <string name="remote">Remote</string>
    <string name="server">Server</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
</resources>